--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -1,5 +1,39 @@
 
 <h1 class="title">Items</h1>
+<div class="row">
+  <h1 class="col col-offset-33">Swalty</h1>
+</div>
 
-<h1>Boom</h1>
+<div class="row">
+  <div class="col col-20"></div>
+  <a class="col col-offset-30">Adresse e-mail</a>
+  <div class="col col-20"></div>
+</div>
 
+<div class="row">
+  <div class="col col-20"></div>
+  <a class="col col-offset-30">Mot de passe</a>
+  <div class="col col-20"></div>
+</div>
+
+<div class="row">
+  <div class="col col-70"></div>
+  <a class="col col-offset-70">connexion</a>
+</div>
+
+<div class="row">
+  <div class="col col-20"></div>
+  <a class="col col-offset-30">INSCRIPTION</a>
+  <div class="col col-20"></div>
+</div>
+
+<div class="row">
+  <div class="col col-20"></div>
+  <a class="col col-offset-30">CONNEXION AVEC F</a>
+  <div class="col col-20"></div>
+</div>
+
+<div class="row">
+  <div class="col col-80"></div>
+  <a class="col col-offset-30">passer</a>
+</div>
