page home terminee

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,12 +1,20 @@
 <ion-view view-title="home">
     <ion-content scroll="false"> <!-- rendre une vue non scrollable -->
 
-        <div class="row">
-            <div class="col col-50">
-                <img src="img/img_sucre.jpg" alt="page_sucre" class="img_sucre">
+        <div class="row page_home">
+            <div class="col col-50 img_sucre">
+                <div class="etiquette_sucre">
+                    <h2>sucré</h2>
+                </div>
             </div>
-            <div class="col col-50">
-                <img src="img/img_sale.jpg" alt="page_salé" class="img_sale">
+
+            <h1> SWALTY </h1>
+            <h3> faites votre choix </h3>
+
+            <div class="col col-50 img_sale">
+                <div class="etiquette_sale">
+                    <h2>salé</h2>
+                </div>
             </div>
         </div>
 
