--- a/www/css/moulou_style.css
+++ b/www/css/moulou_style.css
@@ -9,34 +9,67 @@ h1, h2, p{
 ;
 }
 
+/* RETIRE LE PADDING DE BASE */
+.padding{
+    padding: 0px;
+}
 
 
+/*
 
+    DIV DU BACKGROUND DE LA PAGE RECETTE GAUFRE
 
+*/
+
+.bg-gaufre{
+    background-image: url('../img/bg-gaufre.jpg');
+    background-size: cover;
+    height:25%;
+}
+
+.bg-gaufre h1{
+    color: white;
+    padding: 1%;
+}
+
+.bg-gaufre button{
+    color:white;
+}
+
+/* LISTE DES RECETTES */
 .item-avatar > img:first-child, .item-avatar .item-image, .item-avatar .item-content > img:first-child,
 .item-avatar .item-content .item-image, .item-avatar-left > img:first-child, .item-avatar-left .item-image,
 .item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image {
 
     position: absolute;
-    top: 5px;
-    left: 16px;
-    max-width: 60px;
-    max-height: 60px;
+    left: 3%;
+    bottom : 2%;
+    max-width: 20%;
+    max-height: 70%;
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
 
 
+.item{
+    border-right:transparent;
+    border-left: transparent;
+    border-width: 2px;
+}
+
+/* POLICES DES LISTES */
+
 .item h2{
-    margin: 0 5px 2px 10px;
+    margin: 0% 2% 2% 10%;
     font-size: 18px;
     font-weight: normal;
+    color: #ff6b6b;
 }
 
 .item p{
     color: #666;
     font-size: 16px;
     margin-bottom: 2px;
-    margin-left: 10px;
+    margin-left: 7%;
 }
