--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
 
-            <h1> SWALTY </h1>
+            <h1> swalty </h1>
             <h3> faites votre choix </h3>
 
             <div class="col col-50 img_sale">
