Page recette gaufre

--- a/www/templates/recette-gaufre.html
+++ b/www/templates/recette-gaufre.html
@@ -3,7 +3,8 @@
     <ion-content scroll="true" class="padding"><!-- permet de rendre la  vue non scrollable-->
      <!-- BACKGROUND GAUFRE -->
      <div class="bg-gaufre">
-         <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left"></a>
+         <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
+         </a>
 
          <h1 class="text-center">GAUFRES</h1>
 
@@ -17,8 +18,9 @@
                 <h2>GAUFRE A LA FRAISE</h2>
                 <p>Durée : 10 minutes</p>
                 <p>Difficulté : </p>
-
+                <button class="button-light button-clear ion-ios-heart-outline"></button>
             </a>
+
             <a class="item item-avatar" href="#">
                 <img src="img/gaufre.jpg">
                 <h2>GAUFRE A LA FRAISE</h2>
