--- a/www/css/moulou_style.css
+++ b/www/css/moulou_style.css
@@ -30,10 +30,11 @@ h1, h2, p{
 .bg-gaufre h1{
     color: white;
     padding: 1%;
+    text-shadow: 0px 3px 2.85px rgba(0, 0, 0, 0.004);
 }
 
 .bg-gaufre button{
-    color:white;
+    background-color:white;
 }
 
 /* LISTE DES RECETTES */
@@ -55,7 +56,7 @@ h1, h2, p{
 .item{
     border-right:transparent;
     border-left: transparent;
-    border-width: 2px;
+    border-width: 1px;
 }
 
 /* POLICES DES LISTES */
