--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -37,11 +37,10 @@
 
   <div class="row">
     <div class="col col-80"></div>
-    <a class="col col-offset-30 passer">passer</a><img class="arrow-red" src="../img/arrow-red.png">
+    <a ui-sref="home" class="col col-offset-30 passer">passer</a><img class="arrow-red" src="../img/arrow-red.png">
   </div>
 
 
-  <a ui-sref="home"> page sucré salé </a>
   <a ui-sref="gaufre"> Recettes gaufre </a>
 
 </div>
