Fix page recette-gaufre

--- a/www/templates/recette-gaufre.html
+++ b/www/templates/recette-gaufre.html
@@ -12,38 +12,51 @@
 
 
         <!--LISTE DES RECETTES -->
-        <div class="list">
-            <a class="item item-avatar" href="#">
-                <img src="img/gaufre.jpg">
-                <h2>GAUFRE A LA FRAISE</h2>
-                <p>Durée : 10 minutes</p>
-                <p>Difficulté : </p>
-                <button class="button-light button-clear ion-ios-heart-outline"></button>
-            </a>
 
-            <a class="item item-avatar" href="#">
-                <img src="img/gaufre.jpg">
-                <h2>GAUFRE A LA FRAISE</h2>
-                <p>Durée : 10 minutes</p>
-                <p>Difficulté : </p>
+            <span class="item">
+                <div class="row">
+                    <div class="col col-75">
+                        <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                            <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
+                            <p class="text-left">Durée : 10 minutes</p>
+                            <p class="text-left">Difficulté : </p>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                    </div>
+                </div>
+            </span>
+            <span class="item">
+                <div class="row">
+                    <div class="col col-75">
+                        <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                            <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
+                            <p class="text-left">Durée : 10 minutes</p>
+                            <p class="text-left">Difficulté : </p>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                    </div>
+                </div>
+            </span>
+            <span class="item">
+                    <div class="row">
+                        <div class="col col-75">
+                            <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
+                                <p class="text-left">Durée : 10 minutes</p>
+                                <p class="text-left">Difficulté : </p>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                        </div>
+                    </div>
+                </span>
 
 
-
-            </a>
-            <a class="item item-avatar" href="#">
-                <img src="img/gaufre.jpg">
-                <h2>GAUFRE A LA FRAISE</h2>
-                <p>Durée : 10 minutes</p>
-                <p>Difficulté : </p>
-
-            </a>
-            <a class="item item-avatar" href="#">
-                <img src="img/gaufre.jpg">
-                <h2>GAUFRE A LA FRAISE</h2>
-                <p>Durée : 10 minutes</p>
-                <p>Difficulté : </p>
-
-            </a>
         </div>
 
     </ion-content>
