--- a/www/css/moulou_style.css
+++ b/www/css/moulou_style.css
@@ -38,31 +38,46 @@ h1, h2, p{
 }
 
 /* LISTE DES RECETTES */
+
+.item{
+    padding:0;
+}
+
 .item-avatar > img:first-child, .item-avatar .item-image, .item-avatar .item-content > img:first-child,
 .item-avatar .item-content .item-image, .item-avatar-left > img:first-child, .item-avatar-left .item-image,
-.item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image {
-
-    position: absolute;
+.item-avatar-left .item-content > img:first-child, .item-avatar-left .item-content .item-image{
     left: 3%;
     bottom : 2%;
     max-width: 20%;
-    max-height: 70%;
+    max-height: 60%;
     width: 100%;
     height: 100%;
     border-radius: 50%;
 }
 
 
-.item{
-    border-right:transparent;
-    border-left: transparent;
-    border-width: 1px;
+
+.ion-ios-heart-outline{
+   font-size: 30px;
+    margin-top: 8%;
+
 }
+
+.item button{
+    position: absolute;
+
+}
+
+.item a{
+
+text-decoration: none;
+}
+
 
 /* POLICES DES LISTES */
 
 .item h2{
-    margin: 0% 2% 2% 10%;
+    margin: 0% 5% 0% 26%;
     font-size: 18px;
     font-weight: normal;
     color: #ff6b6b;
@@ -72,5 +87,5 @@ h1, h2, p{
     color: #666;
     font-size: 16px;
     margin-bottom: 2px;
-    margin-left: 7%;
+    margin-left: 31%;
 }
