--- a/www/css/moulou_style.css
+++ b/www/css/moulou_style.css
@@ -15,11 +15,85 @@ h1, h2, p{
 }
 
 
-/*
+/*---------------------------------------------------------
 
-    DIV DU BACKGROUND DE LA PAGE RECETTE GAUFRE
+             PAGE SUCRE
 
-*/
+---------------------------------------------------------*/
+
+.bg-empty h1{
+    color : #ff6b6b;
+    height: 25%;
+    vertical-align: middle;
+
+}
+
+.row-top, .row-center, .row-bottom{
+    height:25%;
+    padding: 0 !important;
+}
+
+
+.col{
+    height: 100%;
+    padding: 0 !important;
+}
+.categ{
+    background-size: cover;
+    height: 100%;
+}
+
+
+/*---------------------------------------------------------
+TEXT
+---------------------------------------------------------*/
+.categ h2{
+    color: white;
+    top: 40%;
+    position: relative;
+    text-shadow: 0px 3px 2.85px rgba(0, 0, 0, 0.004);
+}
+
+
+
+/*---------------------------------------------------------
+ IMAGES CATEGORIES
+ ---------------------------------------------------------*/
+.gaufres{
+    background-image: url('../img/categ-gaufres.jpg');
+
+}
+.muffins{
+    background-image: url('../img/categ-muffin.jpg');
+
+}
+.cookies{
+    background-image: url('../img/categ-cookies.jpg');
+
+}
+.cake{
+    background-image: url('../img/categ-cake.jpg');
+
+}
+.crepes{
+    background-image: url('../img/categ-crepes.jpg');
+
+}
+.paques{
+    background-image: url('../img/categ-paques.jpg');
+
+}
+
+/* FIN IMAGES */
+
+
+/*---------------------------------------------------------
+
+
+    PAGE RECETTE GAUFRE
+
+
+---------------------------------------------------------*/
 
 .bg-gaufre{
     background-image: url('../img/bg-gaufre.jpg');
@@ -37,7 +111,9 @@ h1, h2, p{
     background-color:white;
 }
 
-/* LISTE DES RECETTES */
+/* ---------------------------------------------------------
+LISTE DES RECETTES
+ ---------------------------------------------------------*/
 
 .item{
     padding:0;
@@ -78,7 +154,9 @@ text-decoration: none;
 }
 
 
-/* POLICES DES LISTES */
+/*---------------------------------------------------------
+ POLICES DES LISTES
+ ---------------------------------------------------------*/
 
 .item h2{
     margin: 0% 5% 0% 26%;
@@ -93,3 +171,4 @@ text-decoration: none;
     margin-bottom: 2px;
     margin-left: 31%;
 }
+
