--- a/www/templates/page-sucre.html
+++ b/www/templates/page-sucre.html
@@ -1,16 +1,54 @@
 <ion-view view-title="Sucre"><!--creation d'une vue-->
     <ion-content scroll="false" class="padding">
 
-        <div class="row page-sucre">
-            <div class="col col-50 img_sucre">
-                <div class="categ1">
-                    <h2>GAUFRES</h2>
+        <!-- DIV SUCRE -->
+        <div class="bg-empty">
+            <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
+            </a>
+            <h1 class="text-center">Sucré</h1>
+        </div>
+
+        <!-- CATEGORIES -->
+
+        <div class="row row-top">
+            <div class="col col-50 page-sucre">
+                <div class="categ gaufres">
+                    <h2 class="text-center">GAUFRES</h2>
+                </div>
+
+            </div>
+
+            <div class="col col-50 page-sucre">
+                <a>
+                <div class="categ muffins">
+                    <h2 class="text-center">MUFFINS</h2>
+                </div>
+                </a>
+            </div>
+        </div>
+        <div class="row row-center">
+            <div class="col col-50 page-sucre" >
+                <div class="categ cookies">
+                    <h2 class="text-center">COOKIES</h2>
                 </div>
             </div>
 
-            <div class="col col-50 img_sale">
-                <div class="etiquette_sale">
-                    <h2>salé</h2>
+            <div class="col col-50 page-sucre">
+                <div class="categ cake">
+                    <h2 class="text-center">CAKE</h2>
+                </div>
+            </div>
+        </div>
+        <div class="row row-bottom">
+            <div class="col col-50 page-sucre">
+                <div class="categ crepes">
+                    <h2 class="text-center">CREPES</h2>
+                </div>
+            </div>
+
+            <div class="col col-50 page-sucre">
+                <div class="categ paques">
+                    <h2 class="text-center">PAQUES</h2>
                 </div>
             </div>
         </div>
