--- a/www/templates/page-sucre.html
+++ b/www/templates/page-sucre.html
@@ -1,57 +1,65 @@
 <ion-view view-title="Sucre"><!--creation d'une vue-->
     <ion-content scroll="false" class="padding">
 
+<section class="page-sucre">
         <!-- DIV SUCRE -->
         <div class="bg-empty">
             <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
             </a>
-            <h1 class="text-center">Sucré</h1>
+            <h1 class="text-center">sucré</h1>
+
+
+            <!-- progress bar -->
+            <uib-progressbar value="55"></uib-progressbar>
         </div>
+
+
 
         <!-- CATEGORIES -->
-
-        <div class="row row-top">
-            <div class="col col-50 page-sucre">
-                <div class="categ gaufres">
-                    <h2 class="text-center">GAUFRES</h2>
-                </div>
-
-            </div>
-
-            <div class="col col-50 page-sucre">
-                <a>
-                <div class="categ muffins">
-                    <h2 class="text-center">MUFFINS</h2>
-                </div>
-                </a>
-            </div>
-        </div>
-        <div class="row row-center">
-            <div class="col col-50 page-sucre" >
-                <div class="categ cookies">
-                    <h2 class="text-center">COOKIES</h2>
+    <div class="categories">
+        <div class="row row-top ligne">
+            <div class="col col-50">
+                <div class="bg-categ gaufres">
+                    <h2 class = "text-center">GAUFRES</h2>
                 </div>
             </div>
-
-            <div class="col col-50 page-sucre">
-                <div class="categ cake">
-                    <h2 class="text-center">CAKE</h2>
+            <div class="col col-50">
+                <div class="bg-categ muffins">
+                    <h2 class = "text-center">MUFFINS</h2>
                 </div>
             </div>
         </div>
-        <div class="row row-bottom">
-            <div class="col col-50 page-sucre">
-                <div class="categ crepes">
-                    <h2 class="text-center">CREPES</h2>
+
+        <div class="row row-center ligne">
+            <div class="col col-50">
+                <div class="bg-categ cookies">
+                    <h2 class = "text-center">COOKIE</h2>
                 </div>
             </div>
-
-            <div class="col col-50 page-sucre">
-                <div class="categ paques">
-                    <h2 class="text-center">PAQUES</h2>
+            <div class="col col-50">
+                <div class="bg-categ cake">
+                    <h2 class = "text-center">CAKE</h2>
                 </div>
             </div>
         </div>
+
+        <div class="row row-bottom ligne">
+            <div class="col col-50">
+                <div class="bg-categ crepes">
+                    <h2 class = "text-center">CREPES</h2>
+                </div>
+            </div>
+            <div class="col col-50">
+                <div class="bg-categ event">
+                    <h2 class = "text-center">EVENT</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</section>
 
     </ion-content>
 </ion-view>
