fix page recette gaufre

--- a/www/templates/recette-gaufre.html
+++ b/www/templates/recette-gaufre.html
@@ -3,60 +3,62 @@
     <ion-content scroll="true" class="padding"><!-- permet de rendre la  vue non scrollable-->
      <!-- BACKGROUND GAUFRE -->
 
-     <div class="bg-gaufre">
-         <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
-         </a>
-         <h1 class="text-center">GAUFRES</h1>
-     </div>
+        <section class="page-gaufre">
+
+             <div class="bg-gaufre">
+                 <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
+                 </a>
+                 <h1 class="text-center">GAUFRES</h1>
+             </div>
 
 
-        <!--LISTE DES RECETTES -->
+                <!--LISTE DES RECETTES -->
 
-            <span class="item">
-                <div class="row">
-                    <div class="col col-75">
-                        <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
-                            <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
-                            <p class="text-left">Durée : 10 minutes</p>
-                            <p class="text-left">Difficulté : </p>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                    </div>
-                </div>
-            </span>
-            <span class="item">
-                <div class="row">
-                    <div class="col col-75">
-                        <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
-                            <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
-                            <p class="text-left">Durée : 10 minutes</p>
-                            <p class="text-left">Difficulté : </p>
-                        </a>
-                    </div>
-                    <div class="col">
-                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                    </div>
-                </div>
-            </span>
-            <span class="item">
-                    <div class="row">
-                        <div class="col col-75">
-                            <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
-                                <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
-                                <p class="text-left">Durée : 10 minutes</p>
-                                <p class="text-left">Difficulté :</p>
-                            </a>
+                    <span class="item">
+                        <div class="row">
+                            <div class="col col-75">
+                                <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                    <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
+                                    <p class="text-left">Durée : 10 minutes</p>
+                                    <p class="text-left">Difficulté : </p>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                            </div>
                         </div>
-                        <div class="col">
-                            <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                    </span>
+                    <span class="item">
+                        <div class="row">
+                            <div class="col col-75">
+                                <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                    <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
+                                    <p class="text-left">Durée : 10 minutes</p>
+                                    <p class="text-left">Difficulté : </p>
+                                </a>
+                            </div>
+                            <div class="col">
+                                <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                            </div>
                         </div>
-                    </div>
-                </span>
+                    </span>
+                    <span class="item">
+                            <div class="row">
+                                <div class="col col-75">
+                                    <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                        <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
+                                        <p class="text-left">Durée : 10 minutes</p>
+                                        <p class="text-left">Difficulté :</p>
+                                    </a>
+                                </div>
+                                <div class="col">
+                                    <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                                </div>
+                            </div>
+                        </span>
 
 
-        </div>
-
+                </div>
+        </section>
     </ion-content>
 </ion-view>
