--- a/www/css/moulou_style.css
+++ b/www/css/moulou_style.css
@@ -55,7 +55,7 @@ h1, h2, p{
 }
 
 
-.col{
+.col-50{
     padding: 0 !important;
     height: 100%;
     border-right: 1px solid #cfcfcf;
@@ -128,10 +128,15 @@ h1, h2, p{
 
 ---------------------------------------------------------*/
 
+.page-gaufre{
+    height: 100vh;
+}
 .bg-gaufre{
     background-image: url('../img/bg-gaufre.jpg');
     background-size: cover;
-    height:25%;
+    height: 30%;
+
+
 }
 
 .bg-gaufre h1{
@@ -142,6 +147,8 @@ h1, h2, p{
 
 .bg-gaufre button{
     background-color:white;
+    display: flex;
+    align-items: center;
 }
 
 /* ---------------------------------------------------------
