Route ingre + template

--- a/www/templates/recette-gaufre.html
+++ b/www/templates/recette-gaufre.html
@@ -6,7 +6,7 @@
         <section class="page-gaufre">
 
              <div class="bg-gaufre">
-                 <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="home">
+                 <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="sucre">
                  </a>
                  <h1 class="text-center">GAUFRES</h1>
              </div>
@@ -17,7 +17,7 @@
                     <span class="item">
                         <div class="row">
                             <div class="col col-75">
-                                <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
                                     <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
                                     <p class="text-left">Durée : 10 minutes</p>
                                     <p class="text-left">Difficulté : </p>
@@ -31,7 +31,7 @@
                     <span class="item">
                         <div class="row">
                             <div class="col col-75">
-                                <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
                                     <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
                                     <p class="text-left">Durée : 10 minutes</p>
                                     <p class="text-left">Difficulté : </p>
@@ -45,7 +45,7 @@
                     <span class="item">
                             <div class="row">
                                 <div class="col col-75">
-                                    <a class="item-avatar"  ui-sref="pre-home"><img src="img/gaufre.jpg">
+                                    <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
                                         <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
                                         <p class="text-left">Durée : 10 minutes</p>
                                         <p class="text-left">Difficulté :</p>
