--- a/www/templates/page-sucre.html
+++ b/www/templates/page-sucre.html
@@ -20,9 +20,11 @@
     <div class="categories">
         <div class="row row-top ligne">
             <div class="col col-50">
+              <a ui-sref="gaufre">
                 <div class="bg-categ gaufres">
                     <h2 class = "text-center">GAUFRES</h2>
                 </div>
+                </a>
             </div>
             <div class="col col-50">
                 <div class="bg-categ muffins">
