--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -43,5 +43,6 @@
 
   <a ui-sref="gaufre"> Recettes gaufre </a>
   <a ui-sref="sucre"> Page sucré </a>
+  <a ui-sref="sale"> Page salé </a>
 </div>
 
