page recettes gaufres salees done

--- a/www/css/jisoo_style.css
+++ b/www/css/jisoo_style.css
@@ -110,6 +110,7 @@
 /*---------------------------------------------------------
  IMAGES CATEGORIES
  ---------------------------------------------------------*/
+
 .gaufres-sel{
     background-image: url('../img/icon/waffle-sel.png');
 
@@ -137,3 +138,10 @@
 
 /* FIN IMAGES */
 
+/*---------------------------------------------------------
+ PAGE RECETTES GAUFRES SALEES
+ ---------------------------------------------------------*/
+
+.item-sel h2 {
+    color: #c7f464 !important;
+}
