--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -43,6 +43,7 @@
 
   <a ui-sref="gaufre"> Recettes gaufre </a>
   <a ui-sref="sucre"> Page sucré </a>
-  <a ui-sref="sale"> Page salé </a>
+  <a ui-sref="sel"> Page salé </a>
+  <a ui-sref="gaufre-sel"> Recettes gaufres salés </a>
 </div>
 
