utilisation de la ion-list dans la page recette gaufre salee

--- a/www/templates/recette-gaufre-sel.html
+++ b/www/templates/recette-gaufre-sel.html
@@ -14,7 +14,9 @@
 
             <!--LISTE DES RECETTES -->
 
-                    <span class="item item-sel">
+                    <ion-list>
+                        <ion-item>
+                            <span class="item item-sel">
                         <div class="row">
                             <div class="col col-75">
                                 <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
@@ -28,37 +30,46 @@
                             </div>
                         </div>
                     </span>
-                    <span class="item item-sel">
-                        <div class="row">
-                            <div class="col col-75">
-                                <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
-                                    <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
-                                    <p class="text-left">Durée : 10 minutes</p>
-                                    <p class="text-left">Difficulté : </p>
-                                </a>
-                            </div>
-                            <div class="col">
-                                <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                            </div>
-                        </div>
-                    </span>
-                    <span class="item item-sel">
+                        </ion-item>
+
+                        <ion-item>
+                            <span class="item item-sel">
                             <div class="row">
                                 <div class="col col-75">
                                     <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
                                         <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
                                         <p class="text-left">Durée : 10 minutes</p>
-                                        <p class="text-left">Difficulté :</p>
+                                        <p class="text-left">Difficulté : </p>
                                     </a>
                                 </div>
                                 <div class="col">
                                     <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
                                 </div>
                             </div>
-                        </span>
+                            </span>
+                        </ion-item>
+
+                        <ion-item>
+                            <span class="item item-sel">
+                                <div class="row">
+                                    <div class="col col-75">
+                                        <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
+                                            <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
+                                            <p class="text-left">Durée : 10 minutes</p>
+                                            <p class="text-left">Difficulté :</p>
+                                        </a>
+                                    </div>
+                                    <div class="col">
+                                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                                    </div>
+                                </div>
+                            </span>
+                        </ion-item>
+
+                    </ion-list>
 
 
-            </div>
+
         </section>
     </ion-content>
 </ion-view>
