premier controller done

--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -44,6 +44,6 @@
   <a ui-sref="gaufre"> Recettes gaufre </a>
   <a ui-sref="sucre"> Page sucré </a>
   <a ui-sref="sel"> Page salé </a>
-  <a ui-sref="gaufre-sel"> Recettes gaufres salés </a>
+  <a ui-sref="gaufre-sel"> Recettes gaufres salées </a>
 </div>
 
