--- a/www/templates/recette-gaufre-sel.html
+++ b/www/templates/recette-gaufre-sel.html
@@ -14,14 +14,14 @@
 
             <!--LISTE DES RECETTES -->
 
-                    <ion-list>
-                        <ion-item>
+                    <ion-list ng-controller="RecetteController">
+                        <ion-item ng-repeat="recette in recettes">
                             <span class="item item-sel">
                         <div class="row">
                             <div class="col col-75">
-                                <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
-                                    <h2 class="text-center">GAUFRE A LA FRAISE1</h2>
-                                    <p class="text-left">Durée : 10 minutes</p>
+                                <a class="item-avatar" ui-sref="ingre"><img src="img/gaufre.jpg">
+                                    <h2 class="text-center">{{recette.title}}</h2>
+                                    <p class="text-left">Durée : {{recette.duree}} minutes</p>
                                     <p class="text-left">Difficulté : </p>
                                 </a>
                             </div>
@@ -31,41 +31,6 @@
                         </div>
                     </span>
                         </ion-item>
-
-                        <ion-item>
-                            <span class="item item-sel">
-                            <div class="row">
-                                <div class="col col-75">
-                                    <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
-                                        <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
-                                        <p class="text-left">Durée : 10 minutes</p>
-                                        <p class="text-left">Difficulté : </p>
-                                    </a>
-                                </div>
-                                <div class="col">
-                                    <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                                </div>
-                            </div>
-                            </span>
-                        </ion-item>
-
-                        <ion-item>
-                            <span class="item item-sel">
-                                <div class="row">
-                                    <div class="col col-75">
-                                        <a class="item-avatar"  ui-sref="ingre"><img src="img/gaufre.jpg">
-                                            <h2 class="text-center">GAUFRE A LA FRAISE2</h2>
-                                            <p class="text-left">Durée : 10 minutes</p>
-                                            <p class="text-left">Difficulté :</p>
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                                    </div>
-                                </div>
-                            </span>
-                        </ion-item>
-
                     </ion-list>
 
 
