--- a/www/templates/ingredients.html
+++ b/www/templates/ingredients.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>Déroulé de la recette</title>
-</head>
-<body>
+<ion-view view-title="Gaufre"><!--creation d'une vue-->
+    <ion-content scroll="false" class="padding"><!-- permet de rendre la  vue non scrollable-->
+        <!-- BACKGROUND GAUFRE -->
 
-</body>
-</html>
+        <section class="page-ingre">
+
+            <div class="bg-ingre ingre">
+                <a class="button icon-left ion-chevron-left button-clear button-ligth ion-ios-arrow-thin-left" ui-sref="gaufre">
+                </a>
+                <h2 class="text-center">GAUFRE A LA FRAISE</h2>
+            </div>
+            <div class="resume">
+                <div class="row">
+                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+                        <p class="text-right">4 pers.</p>
+                       <p> 10 min de préparation</p>
+                </div>
+            </div>
+
+        </section>
+    </ion-content>
+ </ion-view>
