--- a/www/templates/recette-gaufre.html
+++ b/www/templates/recette-gaufre.html
@@ -1,6 +1,6 @@
 
 <ion-view view-title="Gaufre"><!--creation d'une vue-->
-    <ion-content scroll="true" class="padding"><!-- permet de rendre la  vue non scrollable-->
+    <ion-content scroll="true" class="padding"><!-- permet de rendre la  vue scrollable-->
      <!-- BACKGROUND GAUFRE -->
 
         <section class="page-gaufre">
