--- a/www/templates/ingredients.html
+++ b/www/templates/ingredients.html
@@ -16,6 +16,23 @@
                        <p> 10 min de préparation</p>
                 </div>
             </div>
+            <div class="content">
+                <h3 class="text-center">INGREDIENTS</h3>
+                <div class="row">
+                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                </div>
+                <div class="row">
+                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                </div>
+                <div class="row">
+                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                </div>
+                <div class="row">
+                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                </div>
+
+                <a href="" class="start">COMMENCER</a>
+            </div>
 
         </section>
     </ion-content>
