--- a/www/templates/ingredients.html
+++ b/www/templates/ingredients.html
@@ -9,27 +9,43 @@
                 </a>
                 <h2 class="text-center">GAUFRE A LA FRAISE</h2>
             </div>
-            <div class="resume">
-                <div class="row">
-                        <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
-                        <p class="text-right">4 pers.</p>
-                       <p> 10 min de préparation</p>
+
+                <div class="row resume">
+                        <div class="col col-30 col-offset-10">
+                            <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+
+                        </div>
+                        <div class="col col-20">
+                            <p class="text-resume">4 pers.</p>
+                        </div>
+                    <div class="col col-40">
+                        <p class="text-resume">10 min de préparation</p>
+                    </div>
                 </div>
-            </div>
+
             <div class="content">
                 <h3 class="text-center">INGREDIENTS</h3>
-                <div class="row">
-                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                <div class="row content">
+                    <div class="col-10"></div>
+                    <div class="col-80">
+                        <div class="row content-detail">
+                        <img src="../img/tool.png" class="img-responsive tool">
+                        <p>Sucre</p>
+                        </div>
+                        <div class="row content-detail">
+                            <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
+                        </div>
+                        <div class="row content-detail">
+                            <img src="../img/tool.png" class="img-responsive tool"> <p>3 oeufs</p>
+                        </div>
+                        <div class="row content-detail">
+                            <img src="../img/tool.png" class="img-responsive tool"> <p>670 grammes de farine blanche</p>
+                        </div>
+                    </div>
+                    <div class="col-10"></div>
+
                 </div>
-                <div class="row">
-                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
-                </div>
-                <div class="row">
-                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
-                </div>
-                <div class="row">
-                    <img src="../img/tool.png" class="img-responsive tool"> <p>4 fraises</p>
-                </div>
+
 
                 <a href="" class="start"> COMMENCER </a>
             </div>
