--- a/www/templates/recette-gaufre-sel.html
+++ b/www/templates/recette-gaufre-sel.html
@@ -14,24 +14,27 @@
 
             <!--LISTE DES RECETTES -->
 
-                    <ion-list ng-controller="RecetteController">
+                   <!-- <ion-list ng-controller="RecetteController">
                         <ion-item ng-repeat="recette in recettes">
                             <span class="item item-sel">
                         <div class="row">
                             <div class="col col-75">
-                                <a class="item-avatar" ui-sref="ingre"><img src="img/gaufre.jpg">
+                                <a class="item-avatar"><img src="img/gaufre.jpg">
                                     <h2 class="text-center">{{recette.title}}</h2>
-                                    <p class="text-left">Durée : {{recette.duree}} minutes</p>
-                                    <p class="text-left">Difficulté : </p>
+                                    <p class="text-left"> Durée : {{recette.duree}} minutes</p>
+                                    <p class="text-left"> Difficulté : </p>
                                 </a>
                             </div>
                             <div class="col">
-                                <button class="button-light button-clear ion-ios-heart-outline pull-right"></button>
+
+                                <button class="button-light button-clear ion-ios-heart-outline pull-right" ng-controller="FavController"></button>
+
+                                <button ng-click="addItem()" class="button-light button-clear ion-ios-heart-outline pull-right"></button>
                             </div>
                         </div>
                     </span>
                         </ion-item>
-                    </ion-list>
+                    </ion-list>-->
 
 
 
