--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -45,6 +45,7 @@
   <a ui-sref="sucre"> Page sucré </a>
   <a ui-sref="sel"> Page salé </a>
   <a ui-sref="gaufre-sel"> Recettes gaufres salées </a>
-  <a ui-sref="testbdd"> TEST </a>
+  <a ui-sref="testbdd"> TESTbdd </a>
+  <a ui-sref="testAuth"> TestAuth </a>
 </div>
 
