--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -8,3 +8,5 @@
   <a ui-sref="gaufre-sel"> Recettes gaufres salées </a>
   <a ui-sref="testbdd"> TESTbdd </a>
   <a ui-sref="testAuth"> TestAuth </a>
+  <a ui-sref="AuthEmail"> Auth </a>
+
