--- a/www/templates/pre-home.html
+++ b/www/templates/pre-home.html
@@ -1,44 +1,5 @@
 
-<div id="pre-home">
-  <div class="row">
-    <h1 class="col col-offset-33">Swalty</h1>
-  </div>
 
-  <div class="row pre-home-div1">
-    <div class="col col-15 "></div>
-    <textarea class="col-70 pre-home-btn1">Adresse e-mail</textarea>
-    <div class="col col-15"></div>
-  </div>
-
-  <div class="row pre-home-div1">
-    <div class="col col-15 "></div>
-    <textarea class="col-70 pre-home-btn1">Mot de passe</textarea>
-    <div class="col col-15"></div>
-  </div>
-
-  <div class="row">
-    <div class="col col-70"></div>
-    <a class="col col-offset-70 pre-home-connection">connexion</a><img class="arrow" src="../img/arrows.png">
-  </div>
-
-  <div class="Place"></div>
-
-  <div class="row pre-home-inscription">
-    <div class="col-20"></div>
-    <div class="col-60 pre-home-inscription1">INSCRIPTION</div>
-    <div class="col-20"></div>
-  </div>
-
-  <div class="row pre-home-connection2">
-    <div class="col-20"></div>
-    <a class="col-60 pre-home-connection3">CONNEXION AVEC F</a>
-    <div class="col-20"></div>
-  </div>
-
-  <div class="row">
-    <div class="col col-80"></div>
-    <a ui-sref="home" class="col col-offset-30 passer">passer</a><img class="arrow-red" src="../img/arrow-red.png">
-  </div>
 
   <a ui-sref="gaufre"> Recettes gaufre </a>
   <a ui-sref="sucre"> Page sucré </a>
@@ -46,5 +7,5 @@
   <a ui-sref="gaufre-sel"> Recettes gaufres salées </a>
   <a ui-sref="testbdd"> TESTbdd </a>
   <a ui-sref="testAuth"> TestAuth </a>
-</div>
+  <a ui-sref="AuthEmail"> Auth </a>
 
